tooling/nargo_cli/tests/snapshots/execution_failure/shl_signed_regression_9592/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:2:5
  │
2 │     unsafe {
  │     ------ The comment must start with the "Safety: " word
  │

bug: Brillig function call isn't properly covered by a manual constraint
  ┌─ src/main.nr:3:9
  │
3 │         func_1()
  │         -------- This Brillig call's inputs and its return values haven't been sufficiently constrained. This should be done to prevent potential soundness vulnerabilities
  │
  = Call stack:
    1. src/main.nr:3:9

error: Assertion failed: attempt to bit-shift with overflow
  ┌─ src/main.nr:7:5
  │
7 │     (-1525866727742442465_i64 / -7342926532602101880_i64) << func_2()
  │     -----------------------------------------------------------------
  │
  = Call stack:
    1. src/main.nr:3:9
    2. src/main.nr:7:5

Failed assertion
