tooling/nargo_cli/tests/snapshots/execution_failure/shl_signed_regression_9592/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:2:5
  │
2 │     unsafe {
  │     ------ The comment must start with the "Safety: " word
  │

error: Attempt to bit-shift with overflow
  ┌─ src/main.nr:7:5
  │
7 │     (-1525866727742442465_i64 / -7342926532602101880_i64) << func_2()
  │     -----------------------------------------------------------------
  │

Error interpreting main function
